--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 
 			// create a WebGL renderer, camera
 			// and a scene
-			var renderer = new THREE.WebGLRenderer();
+			var renderer = new THREE.WebGLRenderer({antialias: true});
+			renderer.setClearColorHex(0x181818);
+			renderer.setFaceCulling("back");
+
 			var camera =
 			  new THREE.PerspectiveCamera(
 			    VIEW_ANGLE,
@@ -57,8 +60,8 @@
 
 			// set up the sphere vars
 			var radius = 50,
-			    segments = 16,
-			    rings = 16;
+			    segments = 24,
+			    rings = 24;
 
 			// create the sphere's material
 			var sphereMaterial =
@@ -79,7 +82,15 @@
 			  sphereMaterial);
 
 			// add the sphere to the scene
+			sphere.position.x = -100;
 			scene.add(sphere);
+
+			// Add a green cube
+			var cubeGeometry = new THREE.CubeGeometry(50, 50, 50);
+			var cubeMaterial = new THREE.MeshLambertMaterial({color: 0x00ff00});
+			var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+			cube.position.x = 100;
+			scene.add(cube);
 
 			////////////////////////////////////////////////////////////////////////////////////////////
 
@@ -98,7 +109,20 @@
 			////////////////////////////////////////////////////////////////////////////////////////////
 			
 			// draw!
-			renderer.render(scene, camera);
+			function render(){
+				requestAnimationFrame(render); // 60fps, but pauses if we tab away
+
+				// Spin the sphere
+				sphere.rotation.y += 0.01;
+
+				// Rotate the cube on 2 axis
+				cube.rotation.x += 0.01;
+				cube.rotation.y += 0.01;
+
+				renderer.render(scene, camera);
+			}
+
+			render();
 
 			////////////////////////////////////////////////////////////////////////////////////////////
 		</script>
