--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>three.js</title>
+		<style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% };
+		</style>
 	</head>
 	<body>
 		<!-- where the content goes -->
