--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>three.js</title>
 		<style>
-			body { margin: 0; }
+			body { margin: 0; background-color: #181818; }
 			canvas { width: 100%; height: 100% };
 		</style>
 	</head>
