--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 		<!-- javascript libs at the end -->
 		<script src="jquery-1.8.2.min.js"></script>
 		<script src="three.min.js"></script>
+		<script src="physi.js"></script>
 
 		<!-- rendering -->
 		<script>
+			'use strict';
+
+			Physijs.scripts.worker = 'physijs_worker.js';
+			Physijs.scripts.ammo = 'ammo.js';
+
 			// set the scene size
 			var WIDTH = window.innerWidth,
 			  HEIGHT = window.innerHeight;
@@ -45,7 +51,7 @@
 			    NEAR,
 			    FAR);
 
-			var scene = new THREE.Scene();
+			var scene = new Physijs.Scene;
 
 			// add the camera to the scene
 			scene.add(camera);
@@ -76,7 +82,7 @@
 
 			// create a new mesh with
 			// sphere geometry
-			var sphere = new THREE.Mesh(
+			var sphere = new Physijs.SphereMesh(
 
 			  new THREE.SphereGeometry(
 			    radius,
@@ -92,7 +98,7 @@
 			// Add a green cube
 			var cubeGeometry = new THREE.CubeGeometry(50, 50, 50);
 			var cubeMaterial = new THREE.MeshLambertMaterial({color: 0x00ff00});
-			var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+			var cube = new Physijs.BoxMesh(cubeGeometry, cubeMaterial);
 			cube.position.x = 100;
 			scene.add(cube);
 
@@ -116,12 +122,7 @@
 			function render(){
 				requestAnimationFrame(render); // 60fps, but pauses if we tab away
 
-				// Spin the sphere
-				sphere.rotation.y += 0.01;
-
-				// Rotate the cube on 2 axis
-				cube.rotation.x += 0.01;
-				cube.rotation.y += 0.01;
+				scene.simulate(); // run physics
 
 				renderer.render(scene, camera);
 			}
