--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<meta charset="utf-8">
 		<title>three.js</title>
 		<style>
-			body { margin: 0; background-color: #181818; }
+			body { margin: 0; background-color: #181818; overflow: hidden; }
 			canvas { width: 100%; height: 100% };
+			a { color: #ffffff; }
+			#oldie a { color:#da0 }
 		</style>
 	</head>
 	<body>
@@ -16,10 +18,13 @@
 		<!-- javascript libs at the end -->
 		<script src="jquery-1.8.2.min.js"></script>
 		<script src="three.min.js"></script>
+		<script src="Detector.js"></script>
 		<script src="physi.js"></script>
 
 		<!-- rendering -->
 		<script>
+			if (!Detector.webgl) return Detector.addGetWebGLMessage();
+
 			'use strict';
 
 			Physijs.scripts.worker = 'physijs_worker.js';
