--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script src="jquery-1.8.2.min.js"></script>
 		<script src="three.min.js"></script>
 		<script src="Detector.js"></script>
+		<script src="OrbitControls.js"></script>
 		<script src="physi.js"></script>
 
 		<!-- rendering -->
@@ -45,7 +46,10 @@
 
 			// create a WebGL renderer, camera
 			// and a scene
-			var renderer = new THREE.WebGLRenderer({antialias: true});
+			var renderer = new THREE.WebGLRenderer({
+				antialias: true,
+				preserveDrawingBuffer   : true  // required to support .toDataURL()
+			});
 			renderer.setClearColorHex(0x181818);
 			renderer.setFaceCulling("back");
 
@@ -59,6 +63,8 @@
 			var scene = new Physijs.Scene;
 
 			// add the camera to the scene
+			var controls = new THREE.OrbitControls( camera );
+
 			scene.add(camera);
 
 			// the camera starts at 0,0,0
@@ -131,6 +137,8 @@
 				requestAnimationFrame(render); // 60fps, but pauses if we tab away
 
 				scene.simulate(); // run physics
+
+				controls.update(); // controls
 
 				// Spin the sphere
 				sphere.rotation.y += 0.01;
