--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
 		<meta charset="utf-8">
 		<title>three.js</title>
 		<style>
-			body { margin: 0; background-color: #181818; overflow: hidden; }
+			body { margin: 0; background-color: #181818; overflow: hidden; color: #fff; }
 			canvas { width: 100%; height: 100% };
 			a { color: #ffffff; }
 			#oldie a { color:#da0 }
+			#info {
+				text-align: center;
+				padding: 10px;
+				z-index: 100;
+				width: 100%;
+				position: absolute;
+			}
 		</style>
 	</head>
 	<body>
+
 		<!-- where the content goes -->
 		<div id="container">
+			<div id="info">Camera: click and drag to rotate, mousewheel to zoom - Shift+click to drop cubes</div>
 		</div>
 
 		<!-- javascript libs at the end -->
@@ -295,7 +304,7 @@
 				ground.receiveShadow = true;
 				scene.add( ground );
 
-				plane = new THREE.Mesh( new THREE.PlaneGeometry( 1000, 1000, 1, 1 ), new THREE.Material( { visible: false } ) );
+				plane = new THREE.Mesh( new THREE.PlaneGeometry( 1000, 1000, 1, 1 ), new THREE.MeshBasicMaterial( { visible: false } ) );
 				scene.add( plane );
 			}
 
