--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 				// Camera controls
 				controls = new THREE.OrbitControls( camera );
 				controls.userZoomSpeed = 0.3;
+				controls.maxPolarAngle = Math.PI/2; // don't let us below the ground plane
 
 				// Other keyboard controls
 				document.addEventListener('keydown', function(event){
