Rename info div to instructions, give it a font

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 			canvas { width: 100%; height: 100% };
 			a { color: #ffffff; }
 			#oldie a { color:#da0 }
-			#info {
+			#instructions {
 				text-align: center;
 				padding: 10px;
 				z-index: 100;
 				width: 100%;
 				position: absolute;
+				font-family: Monospace;
 			}
 		</style>
 	</head>
@@ -21,7 +22,7 @@
 
 		<!-- where the content goes -->
 		<div id="container">
-			<div id="info">Camera: click and drag to rotate, mousewheel to zoom - Shift+click to drop cubes</div>
+			<div id="instructions">Camera: click and drag to rotate, mousewheel to zoom - Shift+click to drop cubes</div>
 		</div>
 
 		<!-- javascript libs at the end -->
