Moved all the JS

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 		</div>
 
 		<!-- javascript libs at the end -->
-		<script src="jquery-1.8.2.min.js"></script>
-		<script src="three.min.js"></script>
-		<script src="Detector.js"></script>
-		<script src="stats.min.js"></script>
-		<script src="OrbitControls.js"></script>
-		<script src="physi.js"></script>
+		<script src="/js/jquery-1.8.2.min.js"></script>
+		<script src="/js/three.min.js"></script>
+		<script src="/js/Detector.js"></script>
+		<script src="/js/stats.min.js"></script>
+		<script src="/js/OrbitControls.js"></script>
+		<script src="/js/physi.js"></script>
 
 		<!-- rendering -->
 		<script>
 			'use strict';
 
-			Physijs.scripts.worker = 'physijs_worker.js';
-			Physijs.scripts.ammo = 'ammo.js';
+			Physijs.scripts.worker = '/js/physijs_worker.js';
+			Physijs.scripts.ammo = '/js/ammo.js';
 
 			// set the scene size
 			var WIDTH = window.innerWidth,
