A basic voxel class

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<script src="/js/stats.min.js"></script>
 		<script src="/js/OrbitControls.js"></script>
 		<script src="/js/physi.js"></script>
+		<script src="/js/voxel.js"></script>
 		<script src="/js/engine.js"></script>
 	</body>
 </html>
