Consolidating controls code into one place

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<script src="/js/three.min.js"></script>
 		<script src="/js/Detector.js"></script>
 		<script src="/js/stats.min.js"></script>
-		<script src="/js/OrbitControls.js"></script>
+		<script src="/js/controls.js"></script>
 		<script src="/js/physi.js"></script>
 		<script src="/js/voxel.js"></script>
 		<script src="/js/engine.js"></script>
